finish views, begin functionality testing

--- a/HairSalon/Views/Stylist/Details.cshtml
+++ b/HairSalon/Views/Stylist/Details.cshtml
@@ -5,7 +5,7 @@
 @model HairSalon.Models.Stylist
 @using HairSalon.Models
 
-<h2>Category Details</h2>
+<h2>Stylist Details</h2>
 <hr />
 <h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)<h3>
 
