--- a/HairSalon/Views/Stylist/Delete.cshtml
+++ b/HairSalon/Views/Stylist/Delete.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model HairSalon.Models.Category
+@model HairSalon.Models.Stylist
 
 <h2>Are you sure you want to delete a stylist?</h2>
 
