--- a/HairSalon/Views/Shared/_Layout.cshtml
+++ b/HairSalon/Views/Shared/_Layout.cshtml
@@ -8,9 +8,14 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" 
       crossorigin="anonymous">    
-    <link rel="stylesheet" href="~/css/styles.css">
+    <link rel="stylesheet" href="~/css/styles.css" type="text/css">
+    <link href="~Styles/Site.css" rel="shylesheet" type="text/css">
+    @RenderPage("~/Shared/_Header.cshtml")
   </head>
   <body>
     @RenderBody()
   </body>
+  <footer>
+    @RenderPage("~/Shared/_Footer.cshtml")
+  </footer>
 </html>
