WIP: nothing displays.

--- a/HairSalon/Views/Shared/_Layout.cshtml
+++ b/HairSalon/Views/Shared/_Layout.cshtml
@@ -10,12 +10,12 @@
       crossorigin="anonymous">    
     <link rel="stylesheet" href="~/css/styles.css" type="text/css">
     <link href="~Styles/Site.css" rel="shylesheet" type="text/css">
-    @RenderPage("~/Shared/_Header.cshtml")
+    <!-- @Html.Partial("~/HairSalon/Shared/_Header.cshtml") -->
   </head>
   <body>
     @RenderBody()
   </body>
   <footer>
-    @RenderPage("~/Shared/_Footer.cshtml")
+    <!-- @Html.Partial("~/HairSalon/Shared/_Footer.cshtml") -->
   </footer>
 </html>
