--- a/HairSalon/Views/Stylist/Create.cshtml
+++ b/HairSalon/Views/Stylist/Create.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model HairSalon.Models.Category
+@model HairSalon.Models.Stylist
 
 <h4>Add a new stylist</h4>
 @using (Html.BeginForm())
