--- a/HairSalon/Views/Shared/_Layout.cshtml
+++ b/HairSalon/Views/Shared/_Layout.cshtml
@@ -3,19 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>@ViewBag.PageTitle</title>
-    <link 
+    <!-- <link 
       rel="stylesheet" 
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" 
-      crossorigin="anonymous">    
-    <link rel="stylesheet" href="~/css/styles.css" type="text/css">
-    <link href="~Styles/Site.css" rel="shylesheet" type="text/css">
-    <!-- @Html.Partial("~/HairSalon/Shared/_Header.cshtml") -->
+      crossorigin="anonymous">     -->
+    <!-- <link rel="stylesheet" href="~/css/styles.css" type="text/css"> -->
+    <link href="~/HairSalon/wwwroot/css/styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+  @RenderSection("~/HairSalon/Views/Shared/_Header.cshtml")
+  <div id="main">
     @RenderBody()
+  </div>
+  <div id="footer">
+  @RenderSection("~/HairSalon/Views/Shared/_Footer.cshtml")
+  </div>
   </body>
-  <footer>
-    <!-- @Html.Partial("~/HairSalon/Shared/_Footer.cshtml") -->
-  </footer>
+
 </html>
